--- a/README
+++ b/README
@@ -9,7 +9,7 @@ What this it ?
 Just another thread pool simple api to work with double linked queue
 
 How too use ?
-look the coments in test.c
+look the comments in test.c
 
 Author:Antonio Costa aka " Cooler_ "
 contact: c00f3r[at]gmail[dot]com
