--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+
+![Alt text](http://ertaislament.files.wordpress.com/2011/11/entomb.png)
+
 example how too use TombPool
  mkdir pack
  cmake ../; make; cd .. ; cp tombpool.h pack; cp test.c pack; cd pack
